<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_subtitle_text">Your inventory is empty</string>
    <string name="edit_activity_name_title">Name</string>
    <string name="default_product_name">Product 1</string>
    <string name="product_price_title">Price:</string>
    <string name="default_product_price">400.00</string>
    <string name="btn_quantity">ModifyQuantity</string>
    <string name="btn_order">Order more</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="default_product_quantity">0</string>
    <string name="list_product_quantity_title">Quantity:</string>
    <string name="btn_sell_product">Sell Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_dialog_title">Add a new product</string>
    <string name="product_name">Product name</string>
    <string name="quantity">enter quantity</string>
    <string name="price">Enter price</string>
    <string name="btn_select_image">image</string>

    <string name="external_storage">External storage</string>
    <string name="permission_title">Permission necessary</string>
    <string name="permission_message">permission is necessary</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="product_info_not_empty">Please fill out all the required information</string>
    <string name="add_product">Add product</string>
    <string name="cancel">Cancel</string>

    <string name="update_product_failed">Error updating product</string>
    <string name="update_product_successful">Product updated</string>
    <string name="delete_dialog_title">Delete this product?</string>
    <string name="sell_product_failed">Error selling product</string>
    <string name="insert_product_failed">Product was not inserted</string>
    <string name="insert_product_success">Product added!</string>
    <string name="delete_product_failed">Product not deleted</string>
    <string name="delete_product_successful">Product deleted</string>
</resources>
