<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="98dp"
            android:padding="16dp" />

        <LinearLayout
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/default_product_name"

                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/list_product_quantity_title"


                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/textview_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_toRightOf="@id/quantity"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/default_product_quantity"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"


                    android:fontFamily="sans-serif-medium"
                    android:text="@string/product_price_title"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD" />

                <TextView
                    android:id="@+id/textview_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_toRightOf="@id/price"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/default_product_price"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_sell"

        android:background="@drawable/ic_shopping_cart_black_24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/list_product_margin"
        android:backgroundTint="@android:color/holo_blue_light"

        android:focusable="false"/>


</RelativeLayout>